fixing address bar problem on mobile v2

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html {
 	scroll-behavior: smooth;
+	/*position: fixed;*/
 }
 
 body {
@@ -14,22 +15,21 @@ body {
 	align-items: center;
 	flex-direction: column;
 	max-width: 100vw;
-	position: fixed;
-
-	
-}
-
-.container {
 	background-color: #212931;
 	background-image: url("../images/overlay.png"), 
-	linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-	url("./bg-img.jpg");
+		linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+		url("./bg-img.jpg");
 	background-size: auto cover;
 	background-position: 60% center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
+
+}
+
+.container {
+	
 	text-align: center;
-	height: calc(100% + 6rem);
+	height: calc(100vh + 6rem);
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -130,6 +130,12 @@ h2 {
 
 
 @media screen and (max-width: 800px){
+	body {
+		background-position: 60% top ;
+		background-attachment: scroll;
+		/*background-size: 10px 30px;
+		*/
+	}
 	.container {
 		height: 100vh;
 	}
